--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./image/quiz.png" type="image/x-icon">
-    <title>Advanced Quiz App</title>
+    <title>Simple Quiz App</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
